fix: title menu support wrap

--- a/src/index.less
+++ b/src/index.less
@@ -30,7 +30,7 @@
     cursor: not-allowed;
 
     .@{prefix}-sector {
-      fill: #fafafc;
+      fill: #f5f5f5;
     }
     .@{prefix}-title {
       fill: #9da0ad;
